
= podoff CHANGELOG.txt


== podoff 0.9.1  not yet released


== podoff 0.9.0  released 2015-10-21

- beta release


== podoff 0.0.1  released 2015-10-20

- initial, empty, release
