@@ -238,7 +238,7 @@ endobj
 /TrimBox [0.0 0.0 612.0 792.0]
 /pdftk_PageNum 2
 /Tabs /W
-/Contents 17 0 R
+/Contents [17 0 R]
 /CropBox [0.0 0.0 612.0 792.0]
 /Thumb 18 0 R
 %/MediaBox [0.0 0.0 612.0 792.0]
